syntax = "proto3";

package grpc;

option go_package = "internal/delivery/grpc";

// Service definition
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

// Message definitions
message GetUserRequest {
  int32 id = 1; // User ID
}

message GetUserResponse {
  int32 id = 1; // User ID
  string name = 2; // User name
  string email = 3; // User email
}
